--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Homework 17 Solved</title>
+    <title>Portfolio</title>
     <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -11,21 +11,48 @@
         <li>ABOUT</li>
         <li>SKILLS</li>
         <li>WORK</li>
-        <li>CONTACT</li>
+        <li>CONTACTsssss</li>
       </ul>
     </header>
     <section class="heroImg">
       <div class="content">
-        <img src="images/placeholder_picture.png">
-        <h1>Your Name</h1>
+        <img src="images/self.png">
+        <h1>Drew Rosson</h1>
         <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
         <button>Download Resume</button>
       </div>
     </section>
+
+    <!--  My UX Skills section coded using CSS flex -->
+
+    <section class="mySkills">
+      <h1>My UX Skills</h1>
+      <div class="flexContainer">
+
+        <div class="skills"><img src="images/code.png" width="300" height="200"><h3>Skill 1</h3><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p></div>
+        <div class="skills"><img src="images/images.png" width="300" height="200"><h3>Skill 2</h3><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p></div>
+        <div class="skills"><img src="images/codeguy.png" width="300" height="200"><h3>Skill 3</h3><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua</p></div>
+      </div>
+        
+
+    </section>
+
+    <section class="myWork">
+      <h1>My Work</h1>
+      <div class="workGrid">
+        <div class="grid-item grid-item1"><img></div><div><h4></h4><p></p><button></button></div>
+        <div class="grid-item grid-item2"><img></div><div><h4></h4><p></p><button></button></div>
+        <div class="grid-item grid-item3"><img></div><div><h4></h4><p></p><button></button></div>
+        
+      </div>
+      <h3>View all projects</h3>
+
+
+    </section>
     <footer>
       <ul>
         <li>ABOUT</li>
-        <li>SKILLSsss</li>
+        <li>SKILLS</li>
         <li>WORK</li>
         <li>CONTACT</li>
       </ul>
