--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <footer>
       <ul>
         <li>ABOUT</li>
-        <li>SKILLSsss</li>
+        <li>SKILLS</li>
         <li>WORK</li>
         <li>CONTACT</li>
       </ul>
