--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>ABOUT</li>
         <li>SKILLS</li>
         <li>WORK</li>
-        <li>CONTACTsssss</li>
+        <li>CONTACT</li>
       </ul>
     </header>
     <section class="heroImg">
