--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header>
+      <img src="images/logo.png" width="100" height="100">
       <ul>
         <li>ABOUT</li>
         <li>SKILLS</li>
